# biomis-chain

./: .gitignore  Cargo.toml  README.md
biomis/: .gitignore  Cargo.toml
biomis/api/: Cargo.toml
biomis/api/src/: handlers.rs  main.rs  utils.rs
biomis/biometric/: Cargo.toml
biomis/biometric/src/: encryption.rs  fuzzy_crypto.rs  lib.rs  zkp.rs
biomis/blockchain/: Cargo.toml
biomis/blockchain/src/: block.rs  consensus.rs  ledger.rs  main.rs  transaction.rs
biomis/contracts/evm_contracts/: poBT.sol  token.sol
biomis/contracts/rust_contracts/: Cargo.toml
biomis/contracts/rust_contracts/src/: lib.rs
biomis/docs/: Biomis_Whitepaper.tex  architecture.md
biomis/tests/: biometric_tests.rs  blockchain_tests.rs  contract_tests.rs
biomis/wallet/: Cargo.toml
biomis/wallet/src/: biometric.rs  main.rs  recovery.rs  signer.rs
